--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </style>
     <script src="logoutSites.js"></script>
     <script>
-        var noiceUrl = "https://github.com/JZ1324/Who-does-Josh-like";
+        var noiceUrl = "https://jz1324.github.io/Who-does-JZ-Like/";
         var rickrollUrl = "https://shattereddisk.github.io/rickroll/rickroll.mp4";
 
         function openNewTab(url) {
