--- a/index.html
+++ b/index.html
@@ -39,12 +39,8 @@
     <script>
         var noiceUrl = "https://jz1324.github.io/Who-does-JZ-Like/";
 
-        function openSameTab(url) {
-            window.location.href = url;
-        }
-
         function unblockTabs() {
-            openSameTab(noiceUrl);
+            window.location.href = noiceUrl;
         }
     </script>
 </head>
