--- a/index.html
+++ b/index.html
@@ -6,8 +6,77 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Good stuff</title>
   <link rel="icon" type="image/png" href="https://i.imgur.com/rJtWReo.png">
+   <style>
+      /* Gradient button CSS */
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100vh;
+        }
+
+        .glow-on-hover {
+            width: 180px;
+            height: 50px;
+            border: none;
+            outline: none;
+            color: #fff;
+            background: #111;
+            cursor: pointer;
+            position: relative;
+            z-index: 0;
+            border-radius: 10px;
+        }
+
+        .glow-on-hover:before {
+            content: '';
+            background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+            position: absolute;
+            top: -2px;
+            left:-2px;
+            background-size: 400%;
+            z-index: -1;
+            filter: blur(5px);
+            width: calc(100% + 4px);
+            height: calc(100% + 4px);
+            animation: glowing 20s linear infinite;
+            opacity: 0;
+            transition: opacity .3s ease-in-out;
+            border-radius: 10px;
+        }
+
+        .glow-on-hover:active {
+            color: #000;
+        }
+
+        .glow-on-hover:active:after {
+            background: transparent;
+        }
+
+        .glow-on-hover:hover:before {
+            opacity: 1;
+        }
+
+        .glow-on-hover:after {
+            z-index: -1;
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: #111;
+            left: 0;
+            top: 0;
+            border-radius: 10px;
+        }
+
+        @keyframes glowing {
+            0% { background-position: 0 0; }
+            50% { background-position: 400% 0; }
+            100% { background-position: 0 0; }
+        }
+    </style>
   <style>
-    /* Loading Screen Styles */
 
     body {
       background-color: #A48BBE;
@@ -231,7 +300,9 @@ for(const star of document.getElementsByClassName("magic-star")) {
 
   <h3><b>Congrats</b>
     <div>
-      <b> </b>
+  <div style="display: flex; justify-content: center; align-items: center;">
+     <button class="glow-on-hover" type="button" onclick="window.location.href='https://jz1324.github.io/7.5/';"><b style="font-size: 22px;
+">7.5 Timetable</b></button>
     </div>
   </h3>
   <div></div>
