--- a/index.html
+++ b/index.html
@@ -265,17 +265,17 @@ const animate = star => {
 
 const stars = document.getElementsByClassName("magic-star");
 
-function animateStars() {
-  for (const star of stars) {
-    animate(star);
-  }
+function animateStarRandomly() {
+  const randomIndex = Math.floor(Math.random() * stars.length);
+  animate(stars[randomIndex]);
 }
 
-// Call animateStars initially
-animateStars();
+// Call animateStarRandomly initially
+animateStarRandomly();
 
 // Repeat the animation every 3 seconds
-setInterval(animateStars, 3000);
+setInterval(animateStarRandomly, 3000);
+
 
 
 
