--- a/index.html
+++ b/index.html
@@ -264,18 +264,17 @@ const animate = star => {
 }
 const stars = document.getElementsByClassName("magic-star");
 
-function animateStarRandomly(star) {
-  animate(star);
-
-  // Schedule the next animation randomly between 0.1 to 1 second
-  const nextInterval = Math.random() * 900 + 100; // Between 100 to 1000 ms
-  setTimeout(() => animateStarRandomly(star), nextInterval);
+function animateStarRandomly() {
+  const randomIndex = Math.floor(Math.random() * stars.length);
+  animate(stars[randomIndex]);
 }
 
-// Call animateStarRandomly for each star
-for (const star of stars) {
-  animateStarRandomly(star);
-}
+// Call animateStarRandomly initially
+animateStarRandomly();
+
+// Repeat the animation every 3 seconds
+setInterval(animateStarRandomly, 3000);
+
 
 
 
