--- a/index.html
+++ b/index.html
@@ -264,16 +264,18 @@ const animate = star => {
 }
 const stars = document.getElementsByClassName("magic-star");
 
-function animateStarRandomly() {
-  const randomIndex = Math.floor(Math.random() * stars.length);
-  animate(stars[randomIndex]);
+function animateStars() {
+  for (const star of stars) {
+    animate(star);
+  }
 }
 
-// Call animateStarRandomly initially
-animateStarRandomly();
+// Call animateStars initially
+animateStars();
 
 // Repeat the animation every 3 seconds
-setInterval(animateStarRandomly, 3000);
+setInterval(animateStars, 3000);
+
 
 
 
