--- a/index.html
+++ b/index.html
@@ -284,6 +284,9 @@ setInterval(animateStars, 1000);
  </script>
 </head>
 <body>
+   <div style="display: flex; justify-content: left; align-items: left;">
+     <button class="glow-on-hover" type="button" onclick="window.location.href='index.html';"><b style="font-size: 22px;
+">Back</b></button>
  <h1>
   Welcome to the
   <span class="magic">
