--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ setInterval(animateStars, 1000);
 </head>
 <body>
    <div style="display: flex; justify-content: left; align-items: center;">
-     <button class="glow-on-hover" type="button" onclick="window.location.href='index.html';"><b style="font-size: 22px;
+     <button class="glow-on-hover" type="button" onclick="window.location.href='https://jz1324.github.io/8.6-Timetable/index.html';"><b style="font-size: 22px;
 ">Back</b></button>
  <h1>
   Welcome to the
