--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@ setInterval(animateStars, 1000);
    <div style="display: flex; justify-content: left; align-items: center;">
      <button class="glow-on-hover" type="button" onclick="window.location.href='https://jz1324.github.io/8.6-Timetable/index.html';"><b style="font-size: 22px;
 ">Back</b></button>
+    <div></div>
  <h1>
   Welcome to the
   <span class="magic">
