--- a/index.html
+++ b/index.html
@@ -282,12 +282,13 @@ setInterval(animateStars, 1000);
 
 
  </script>
+ 
 </head>
 <body>
    <div style="display: flex; justify-content: left; align-items: center;">
      <button class="glow-on-hover" type="button" onclick="window.location.href='https://jz1324.github.io/8.6-Timetable/index.html';"><b style="font-size: 22px;
 ">Back</b></button>
-    <div></div>
+   </div>
  <h1>
   Welcome to the
   <span class="magic">
