--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ setInterval(animateStars, 1000);
 </head>
 <body>
    <div class="back-button-container">
-     <button class="glow-on-hover" type="button" onclick="window.location.href='https://jz1324.github.io/8.6-Timetable/index.html';"><b style="font-size: 22px;
+     <button class="glow-on-hover" type="button" onclick="window.location.href='https://jz1324.github.io/8.6-Timetable/QOTD.html';"><b style="font-size: 22px;
 ">Back to Qtod</b></button>
    </div>
  <h1>
