--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ setInterval(animateStars, 1000);
   Timetables
 </h1>
 
-  <h3><b>Congrats</b>
+  <h3><b>Timetable's</b>
     <div>
   <div style="display: flex; justify-content: center; align-items: center;">
      <button class="glow-on-hover" type="button" onclick="window.location.href='https://jz1324.github.io/7.5/';"><b style="font-size: 22px;
