--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@ setInterval(animateStars, 1000);
      <button class="glow-on-hover" type="button" onclick="window.location.href='https://jz1324.github.io/7.5/';"><b style="font-size: 22px;
 ">7.5 Timetable</b></button>
     </div>
+     &nbsp;
        <div style="display: flex; justify-content: center; align-items: center;">
      <button class="glow-on-hover" type="button" onclick="window.location.href='https://jz1324.github.io/8.6-Timetable/index.html';"><b style="font-size: 22px;
 ">8.6 Timetable</b></button>
